--- a/webcrawler/pom.xml
+++ b/webcrawler/pom.xml
@@ -26,6 +26,13 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+	    <groupId>org.jsoup</groupId>
+	    <artifactId>jsoup</artifactId>
+	    <version>1.9.1</version>
+	</dependency>
+    
   </dependencies>
 
   <build>
