--- a/webspider/pom.xml
+++ b/webspider/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.creave</groupId>
-  <artifactId>webcrawler</artifactId>
+  <artifactId>webspider</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
@@ -36,7 +36,7 @@
   </dependencies>
 
   <build>
-    <finalName>webcrawler</finalName>
+    <finalName>webspider</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
