--- a/webspider/pom.xml
+++ b/webspider/pom.xml
@@ -33,6 +33,12 @@
 	    <version>1.9.1</version>
 	</dependency>
     
+    <dependency>
+	    <groupId>org.seleniumhq.selenium</groupId>
+	    <artifactId>selenium-java</artifactId>
+	    <version>3.14.0</version>
+	</dependency>
+
   </dependencies>
 
   <build>
