--- a/webspider/pom.xml
+++ b/webspider/pom.xml
@@ -28,6 +28,13 @@
     </dependency>
     
     <dependency>
+      <groupId>net.sf.json-lib</groupId>
+      <artifactId>json-lib</artifactId>
+      <version>2.4</version>
+      <classifier>jdk15</classifier>
+    </dependency>
+    
+    <dependency>
 	    <groupId>org.jsoup</groupId>
 	    <artifactId>jsoup</artifactId>
 	    <version>1.9.1</version>
